--- a/readme
+++ b/readme
@@ -7,3 +7,5 @@ Comment utiliser l'outil?
 3. faire un "npm start" dans le terminal pour lancer le serveur local
 
 4. aller sur l'url : http://localhost:3000/ & enjoy
+
+5. Pour mettre à jour directement, faire un git pull origin main dans la console de temps en temps
